[gd_scene load_steps=6 format=2]

[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Shield.gd" type="Script" id=2]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 32.0

[node name="Shield 1" type="Polygon2D"]
color = Color( 1.3, 1.3, 1.3, 1 )
polygon = PoolVector2Array( -16, -72, -24, -64, -16, -56, 16, -56, 24, -64, 16, -72 )
script = ExtResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 17

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -64 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Hitbox" parent="." instance=ExtResource( 1 )]
collision_layer = 1
collision_mask = 4
base_damage = 50
knockback = 3.0

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -64 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -64 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 16, -64 )
__meta__ = {
"_gizmo_extents_": 5.0
}

[node name="Stats" parent="." instance=ExtResource( 4 )]
base_max_health = 1500
BASE_MAX_SPEED = 0

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
